# optical-diagram

./: .gitignore  LICENSE  README.md  optical_diagram.py  pyproject.toml  ruff.toml
docs/: Makefile
docs/source/: api_reference.rst  conf.py  index.rst  releases.rst
docs/source/_static/: monospace_titles.css
docs/source/_templates/autosummary/: class.rst  function.rst
examples/: FPM.py  GALLERY_HEADER.rst  beam_splitter_and_fiber.py  galilean_telescope.py
examples/test_fiber_display/: GALLERY_HEADER.rst  test_fiber_splitter.py
optical_diagram/: __init__.py  _annotations.py  _base.py  _beams.py  _fiber.py  _lenses.py  _mirrors.py  _table.py
tests/: test_base.py  test_lenses.py  test_mirrors.py  test_optical_diagram.py
