[build-system]
requires      = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "optical_diagram"
dynamic = ["version"]
authors = [
    { name = "Noé Hirschauer", email = "noe.hirschauer@universite-paris-saclay.fr" },
]
description = "Draw optical diagrams using matplotlib."
requires-python = ">=3.8"
license = { file = "LICENSE" }
readme = "README.md"

# Project URLs
urls = { "Repository" = "https://github.com/NoeHirschauer/optical-diagram" }

# core dependencies
dependencies = [
    "matplotlib>=3",
    "numpy>=1.20",
]

# build optional dependencies (documentation, testing, etc.)
[project.optional-dependencies]

# documentation dependencies
docs = [
    "sphinx>=8.0",
    "pydata-sphinx-theme>=0.15",
    "sphinx_gallery>=0.20"
]

# testing dependencies
tests = [
    "pytest>=7.0",
]

# combined development dependencies
dev = [
    "sphinx>=8.0",
    "pydata-sphinx-theme>=0.15",
    "sphinx_gallery>=0.20",
    "pytest>=7.0",
]


[tool.setuptools]
packages = ["optical_diagram"]

[tool.setuptools.dynamic]
version = { attr = "optical_diagram.__version__" }

[tool.pytest.ini_options]
pythonpath = ["."]  # ALlow imports from the root directory in the tests folder
testpaths  = ["tests"]
addopts    = ["--import-mode=importlib"]
